trying out stackoverflow answer on how to fix this issue

--- a/public/assets/navbar/css/navbar.css
+++ b/public/assets/navbar/css/navbar.css
@@ -77,25 +77,23 @@
   margin-left: 18px;
 }
 
-.csstransforms .cn-wrapper li:nth-child(5) img {
+.csstransforms .cn-wrapper li:nth-child(5) img{
   margin-right: 18px;
 }
 
 .cn-button {
   border: none;
-
   background: none;
   color: white;
   padding-bottom: 1em;
   height: 4.5em;
   width: 4.5em;
   background-color: black;
-  position: sticky;
-  bottom: 1em;
+  position: fixed;
   left: 50%;
   margin-left: -2.25em;
   top: 100%;
-  z-index: 9999;
+  z-index: 11;
   margin-top: -2.25em;
   border-radius: 50%;
   text-align: center;
@@ -192,9 +190,9 @@
 .csstransforms .cn-wrapper li a:hover,
 .csstransforms .cn-wrapper li a:active,
 .csstransforms .cn-wrapper li a:focus {
-  background: -webkit-radial-gradient(transparent 35%, #ff3b00 35%);
-  background: -moz-radial-gradient(transparent 35%, #ff3b00 35%);
-  background: radial-gradient(transparent 35%, #ff3b00 35%);
+  background: -webkit-radial-gradient(transparent 35%, #FF3B00 35%);
+  background: -moz-radial-gradient(transparent 35%, #FF3B00 35%);
+  background: radial-gradient(transparent 35%, #FF3B00 35%);
   scale: 1.1;
   transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -254,20 +252,20 @@
 
 @media only screen and (max-width: 500px) {
   .no-ccstransforms .cn-wrapper {
-    padding: 0.5em;
+    padding: .5em;
   }
 
   .no-csstransforms .cn-wrapper li {
     width: 4em;
     height: 4em;
-    font-size: 0.9em;
+    font-size: .9em;
     line-height: 4em;
   }
 }
 
 @media only screen and (max-width: 480px) {
   .csstransforms .cn-wrapper {
-    font-size: 0.68em;
+    font-size: .68em;
   }
 
   .cn-button {
